--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
 
         <div class="search-wrapper">
             <form action="/" method="GET" class="search-container">
-                <span class="search-icon">🔍</span>
+                <span class="search-icon"></span>
                 <input type="text" name="q" class="search-input" placeholder="Search IP, Email, Wallet..." value="{{ .SearchQuery }}">
                 {{ if .SearchQuery }}
                     <a href="/" class="search-clear">✖</a>
